--- a/css/betterize.css
+++ b/css/betterize.css
@@ -1,8 +1,8 @@
-/* //////////////////////////////////////////////////////////////////
-// betterize.scss - Opinionated normalize for cross-browser design //
-// @author Stephen M Irving -- <stephenirving.net> //////////////////
-// Version 0.4.5 02/17/2020 /////////////////////////////////////////
-////////////////////////////////////////////////////////////////// */
+/* ////////////////////////////////////////////////////////////////////////////
+// betterize.css - Opinionated normalization for better cross-browser design //
+// @author Stephen M Irving -- <stephenirving.net> ////////////////////////////
+// Version 0.4.5 02/17/2020 ///////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////// */
 
 *,
 :before,
