--- a/css/betterize.css
+++ b/css/betterize.css
@@ -1,6 +1,6 @@
 /* ////////////////////////////////////////////////////////////////////////////
 // betterize.css - Opinionated normalization for better cross-browser design //
-// @author Stephen M Irving -- <stephenirving.net> ////////////////////////////
+// @author Stephen M Irving -- <stephenmichaelirving@gmail.com> ///////////////
 // Version 0.4.5 02/17/2020 ///////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////// */
 
