--- a/css/betterize.css
+++ b/css/betterize.css
@@ -64,9 +64,7 @@ table {
 
 hr {
   box-sizing: content-box;
-  display: block;
-  font-size: 2em;
-  height: 1px;
+  height: 0;
   overflow: visible;
 }
 
