--- a/css/betterize.css
+++ b/css/betterize.css
@@ -1,35 +1,36 @@
-/* ////////////////////////////////////////////////////////////////////////////
-// betterize.css - Opinionated normalization for better cross-browser design //
-// @author Stephen M Irving -- <stephenmichaelirving@gmail.com> ///////////////
-// @version 0.5.0 03/14/2020 //////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////// */
-
-*,
-:before,
-:after {
-  background-repeat: no-repeat;
-  box-sizing: inherit;
-}
-
-:before,
-:after {
-  text-decoration: inherit;
-  vertical-align: inherit;
-}
+/* /////////////////////////////////////////////////////////////////////////////
+// -----------------------------------------------------------------------------
+// betterize.css - Opinionated normalization for better cross-browser design ///
+// @author Stephen M Irving -- <@metric_dev> -----------------------------------
+// @version 1.0.0 01/03/2024 ---------------------------------------------------
+// -----------------------------------------------------------------------------
+///////////////////////////////////////////////////////////////////////////// */
 
 html {
+  overflow: hidden scroll;
   box-sizing: border-box;
-  cursor: default;
-  font-family: sans-serif;
-  font-size: 100%;
-  line-height: 1.5;
-  scroll-behavior: smooth;
+  color: #333;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol';
+  font-size: 1em;
+  line-height: 1.4;
+  overflow-wrap: break-word;
   -moz-tab-size: 4;
   tab-size: 4;
+  cursor: default;
+  scroll-behavior: smooth;
+  scrollbar-gutter: stable;
   -webkit-tap-highlight-color: transparent;
+  -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  word-wrap: break-word;
+  text-size-adjust: 100%;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -38,66 +39,76 @@ html {
   }
 }
 
+*,
+::before,
+::after {
+  box-sizing: inherit;
+  background-repeat: no-repeat;
+}
+
+::before,
+::after {
+  vertical-align: inherit;
+  text-decoration: inherit;
+}
+
 body {
-  background: #fefefe;
-  color: #0a0a0a;
+  overflow-x: clip;
+  margin: 0;
+  background: $color-body-bg;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin: 0;
   text-rendering: optimizeLegibility;
 }
 
-details,
-main {
-  display: block;
+/* Customize the background color to match your design. */
+
+::-moz-selection {
+  background: #345171;
+  color: #222;
+  text-shadow: none;
 }
 
-summary {
-  display: list-item;
+::selection {
+  background: #345171;
+  color: #222;
+  text-shadow: none;
 }
 
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+blockquote {
+  font-family:
+    'Lato',
+    Helvetica,
+    Arial,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    sans-serif;
+  text-wrap: balance;
+  white-space: unset;
 }
 
 table {
-  border-collapse: collapse;
   font-variant-numeric: tabular-nums;
+  border-collapse: collapse;
+  border-color: currentcolor;
+  border-spacing: 0;
+  text-indent: 0;
   vertical-align: middle;
-}
-
-nav ol,
-nav ul {
-  list-style: none;
-  padding: 0;
-}
-
-dl dl,
-dl ol,
-dl ul,
-ol dl,
-ol ol,
-ol ul,
-ul dl,
-ul ol,
-ul ul {
-  margin: 0;
 }
 
 dialog {
   background-color: #fff;
   border: solid;
-  color: #222;
-  display: block;
+  color: #000;
   height: -moz-fit-content;
-  height: -webkit-fit-content;
   height: fit-content;
   left: 0;
   margin: auto;
@@ -105,7 +116,6 @@ dialog {
   position: absolute;
   right: 0;
   width: -moz-fit-content;
-  width: -webkit-fit-content;
   width: fit-content;
 }
 
@@ -114,96 +124,82 @@ template {
   display: none;
 }
 
-iframe,
-img,
-input,
-select,
-textarea {
-  height: auto;
-  max-width: 100%;
-}
-
 abbr[title] {
   border-bottom: none;
-  text-decoration: underline;
-  text-decoration: underline dotted;
+  text-decoration: none;
 }
 
-///
-/// Normalize the style of <b>, <strong>, <i>, and <em> elements.
-///
+/* Add the correct font weight in Chrome, Edge, and Safari. */
 
 b,
 strong {
-  font-weight: 700;
+  font-weight: bolder;
   line-height: inherit;
 }
 
-i,
-em {
-  font-style: italic;
-  line-height: inherit;
-}
+/* Add the correct font size in all browsers. */
 
 small {
   font-size: 80%;
   line-height: inherit;
 }
 
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-
-::-moz-selection {
-  background: #b3d4fc;
-  color: #000;
-  text-shadow: none;
-}
-
-::selection {
-  background: #b3d4fc;
-  color: #000;
-  text-shadow: none;
-}
+/* Prevent `sub` and `sup` elements from affecting the line height in
+// all browsers. */
 
 sub,
 sup {
-  font-size: 75%;
-  line-height: 0;
   position: relative;
   vertical-align: baseline;
+  font-size: 75%;
+  line-height: 0;
 }
 
 sub {
-  bottom: -.25em;
+  bottom: -0.25em;
 }
 
 sup {
-  top: -.5em;
+  top: -0.5em;
 }
+
+img {
+  border-style: none;
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-style: italic;
+  -ms-interpolation-mode: bicubic;
+  shape-margin: 1rem;
+}
+
+img,
+picture,
+details {
+  display: block;
+}
+
+textarea {
+  resize: vertical;
+}
+
+select:not([multiple]):not([size]) {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='4'%3E%3Cpath d='M4 0h6L7 4'/%3E%3C/svg%3E");
+}
+
+/*
+/* 1 . Change the font styles in all browsers.
+// 2. Remove the margin in Firefox and Safari.
+*/
 
 button,
 input,
 optgroup,
 select,
 textarea {
-  font: inherit;
-  margin: 0;
-}
-
-button,
-input,
-select,
-textarea {
-  background-color: transparent;
-  border: 1px solid WindowFrame;
-  color: inherit;
-  letter-spacing: inherit;
-  padding: 0.25em 0.375em;
+  margin: 0; /* 2 */
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
 }
 
 a,
@@ -219,15 +215,25 @@ textarea,
   touch-action: manipulation;
 }
 
-button,
-input {
-  overflow: visible;
+a {
+  cursor: pointer;
 }
+
+a,
+a:link,
+a:visited {
+  text-decoration: none;
+}
+
+
+/* Remove the inheritance of text transform in Edge, Firefox, and IE. */
 
 button,
 select {
   text-transform: none;
 }
+
+/* Correct the inability to style clickable types in iOS and Safari. */
 
 button,
 [type='button'],
@@ -236,36 +242,140 @@ button,
   -webkit-appearance: button;
 }
 
-button::-moz-focus-inner,
-[type='button']::-moz-focus-inner,
-[type='reset']::-moz-focus-inner,
-[type='submit']::-moz-focus-inner {
-  border-style: none;
+/* Remove the inner border and padding in Firefox. */
+::-moz-focus-inner {
   padding: 0;
+  border-style: none;
 }
 
-button:-moz-focusring,
-[type='button']:-moz-focusring,
-[type='reset']:-moz-focusring,
-[type='submit']:-moz-focusring {
+/* Restore the focus styles unset by the previous rule. */
+
+:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
-select {
+legend {
+  padding: 0;
+}
+
+/* Add the correct vertical alignment in Chrome, Firefox, and Opera. */
+
+progress {
+  display: inline-block;
+  vertical-align: baseline;
+}
+
+[type='checkbox'],
+[type='radio'] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+/* Correct the cursor style of increment and decrement buttons in Chrome. */
+
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type='search'] {
+  outline-offset: -2px;
+  -webkit-appearance: textfield;
+}
+
+::-webkit-search-decoration {
   -webkit-appearance: none;
-  -moz-appearance: none;
-  background: no-repeat right center / 1em;
-  border-radius: 0;
-  padding-right: 1em;
 }
 
-select:not([multiple]):not([size]) {
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='4'%3E%3Cpath d='M4 0h6L7 4'/%3E%3C/svg%3E");
+:where(details > summary:first-of-type) {
+  display: list-item;
 }
 
-textarea {
-  overflow: auto;
-  resize: vertical;
+::-webkit-input-placeholder {
+  color: inherit;
+  opacity: 0.54;
+}
+
+::placeholder {
+  color: inherit;
+  opacity: 0.54;
+}
+
+/*
+// 1 . Correct the inability to style clickable types in iOS and Safari.
+// 2. Change font properties to `inherit` in Safari.
+*/
+
+::-webkit-file-upload-button {
+  font: inherit;
+  -webkit-appearance: button;
+}
+
+:-moz-ui-invalid {
+  box-shadow: none;
+}
+
+:-moz-submit-invalid {
+  box-shadow: none;
+}
+
+:invalid {
+  box-shadow: none;
+}
+
+/* A better looking default horizontal rule */
+
+hr {
+  display: block;
+  box-sizing: content-box;
+  height: 1px;
+  padding: 0;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+}
+
+iframe {
+  border: 0;
+}
+
+audio,
+canvas,
+iframe,
+img,
+picture,
+svg,
+video {
+  vertical-align: middle;
+}
+
+audio,
+embed,
+iframe,
+input,
+img,
+object,
+picture,
+select,
+textarea,
+video {
+  max-width: 100%;
+}
+
+iframe,
+img,
+input,
+picture,
+select,
+textarea,
+video {
+  height: auto;
+}
+
+fieldset {
+  padding: 0;
+  border: 0;
+  margin: 0;
 }
 
 input:disabled,
@@ -275,88 +385,56 @@ textarea:disabled {
   cursor: not-allowed;
 }
 
-///
-/// Correct the text style of placeholders in text fields.
-///
-
-::-webkit-input-placeholder {
-  color: #cacaca;
+dl,
+ol,
+ul {
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
-::-moz-placeholder {
-  color: #cacaca;
-}
-
-:-ms-input-placeholder {
-  color: #cacaca;
-}
-
-::-ms-input-placeholder {
-  color: #cacaca;
-}
-
-::placeholder {
-  color: #cacaca;
-}
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  font: inherit;
-}
-
-::-ms-expand {
-  display: none;
-}
-
-:-moz-ui-invalid {
-  box-shadow: none;
-}
-
-fieldset {
-  border: 1px solid #a0a0a0;
-  padding: 0.35em 0.75em 0.625em;
-}
-
-legend {
-  color: inherit;
-  display: table;
-  max-width: 100%;
+menu,
+nav ol,
+nav ul,
+footer ol,
+footer ul {
   padding: 0;
-  white-space: normal;
+  margin: 0;
+  list-style: none;
 }
 
-progress {
-  display: inline-block;
-  vertical-align: baseline;
+dl dl,
+dl ol,
+dl ul,
+ol dl,
+ol ol,
+ol ul,
+ul dl,
+ul ol,
+ul ul {
+  margin: 0;
 }
 
-[type='number']::-webkit-inner-spin-button,
-[type='number']::-webkit-outer-spin-button {
-  height: auto;
+/* Prevent VoiceOver from ignoring list semantics in Safari  */
+
+nav li:before {
+  content: '\200B';
+  float: left;
 }
 
-[type='search'] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
+pre {
+  overflow: auto;
 }
 
-[type='search']::-webkit-search-cancel-button,
-[type='search']::-webkit-search-decoration {
-  -webkit-appearance: none;
+pre,
+code,
+kbd,
+samp {
+  font-family: ui-monospace, Consolas, 'Liberation Mono', Menlo, monospace;
+  font-size: 1em;
 }
 
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-  vertical-align: middle;
-}
-
-img {
-  display: inline-block;
-  -ms-interpolation-mode: bicubic;
+address {
+  font-style: normal;
 }
 
 svg:not(:root) {
@@ -364,7 +442,7 @@ svg:not(:root) {
 }
 
 svg:not([fill]) {
-  fill: currentColor;
+  fill: currentcolor;
 }
 
 [aria-busy='true'] {
@@ -385,6 +463,6 @@ svg:not([fill]) {
 }
 
 [aria-hidden='false'][hidden]:not(:focus) {
-  clip: rect(0, 0, 0, 0);
   position: absolute;
+  clip: rect(0, 0, 0, 0);
 }
