--- a/css/_old-betterize.css
+++ b/css/_old-betterize.css
@@ -1,9 +1,9 @@
 /* ////////////////////////////////////////////////////////////////////////////
-// ----------------------------------------------------------------------------
+// --------------------------------------------------------------------------//
 // betterize.css - Opinionated normalization for better cross-browser design //
-// @author Stephen M Irving -- <stephenmichaelirving@gmail.com> ///////////////
-// @version 0.9.8 03/14/2020 //////////////////////////////////////////////////
-// ----------------------------------------------------------------------------
+// @author Stephen M Irving -- <stephenmichaelirving@gmail.com> -------------//
+// @version 0.9.8 03/14/2020 ------------------------------------------------//
+// --------------------------------------------------------------------------//
 //////////////////////////////////////////////////////////////////////////// */
 
 *,
